<resources>
    <string name="app_name">TodoTree</string>


    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>

    <string name="base_add">Add</string>
    <string name="base_update">Update</string>
    <string name="base_cancel">Cancel</string>
    <string name="base_delete">Delete</string>

    <string name="base_subject">Subject</string>

    <string name="default_subject_name">Default</string>

    <string name="subject_list_all_title">ALL</string>

    <string name="item_menu_add_sub_todo_hint">Input sub-todo title</string>
    <string name="item_menu_btn_add_sub_todo">@string/base_add</string>
    <string name="item_menu_btn_delete">@string/base_delete</string>
    <string name="item_menu_btn_done">Done</string>
    <string name="item_menu_btn_edit">Edit</string>
    <string name="item_due_date_defualt">Due Date</string>
    <string name="item_due_date_prefix">"Due Date : "</string>
    <string name="item_last_update_defualt">Updated</string>

    <string name="dialog_loading_title">Loading...</string>

    <string name="dialog_edit_todo_title_subject">Subject</string>
    <string name="dialog_edit_todo_prompt_subject">Select Subject</string>
    <string name="dialog_edit_todo_title_name">Todo Name</string>
    <string name="dialog_edit_todo_hint_name">Input todo title</string>
    <string name="dialog_edit_todo_check_due_date">Set Due Date</string>
    <string name="dialog_edit_todo_title_due_date">Due Date</string>
    <string name="dialog_edit_todo_btn_add">@string/base_add</string>
    <string name="dialog_edit_todo_btn_update">@string/base_update</string>
    <string name="dialog_edit_todo_btn_cancel">@string/base_cancel</string>

    <string name="dialog_edit_subject_title_name">Subject Name</string>
    <string name="dialog_edit_subject_hint_name">Input subject title</string>
    <string name="dialog_edit_subject_title_color">Color</string>
    <string name="dialog_edit_subject_btn_add">@string/base_add</string>
    <string name="dialog_edit_subject_btn_Delete">@string/base_delete</string>
    <string name="dialog_edit_subject_btn_cancel">@string/base_cancel</string>

    <string name="dialog_delete_todo_title">@string/base_delete</string>
    <string name="dialog_delete_todo_text_complete">Delete as a completed Todo?</string>
    <string name="dialog_delete_todo_text_complete_sub">Delete as a completed Sub-Todo?</string>
    <string name="dialog_delete_todo_text_not_complete">
        Todo is not completed. Really delete?\n
        (If there is Sub-Todo, it also delete)
    </string>

    <string name="dialog_add_title_target_date_dummy">Click to select date</string>

    <string name="backpress_timer_wait_text">Tap the Back button one more time to exit</string>

    <string name="default_subject_color_string">#FF555555</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
